refactor: 예외 메시지 변경, getter 로직 변경, 오름차순 정렬 메소드 추가